[project]
name = "rag-chatbot-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.70",
    "faiss-cpu>=1.12.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "openai>=2.7.2",
    "pypdf>=6.2.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
