[project]
name = "rag-chatbot-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.34.69",
    "faiss-cpu==1.8.0",
    "langchain==0.1.10",
    "langchain-community==0.0.28",
    "langchain-openai==0.0.8",
    "openai==1.14.0",
    "pypdf==4.1.0",
    "sentence-transformers==2.5.1",
    "streamlit==1.32.0",
]
